name:                ViennaRNAParser
-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.1
synopsis:            Libary for parsing ViennaRNA package output
description:         Currently contains parsers and datatypes for: RNAplex, RNAz. The libary is tested with Version >2.0 of the ViennaRNA package.
                     
license:             GPL
license-file:        LICENSE
author:              Florian Eggenhofer
maintainer:          egg@tbi.univie.ac.at
-- copyright:           
category:            Bioinformatics
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type:     git
  location: https://github.com/eggzilla/ViennaRNAParser

source-repository this
  type:     git
  location: https://github.com/eggzilla/ViennaRNAParser/tree/v0.0.1
  tag:      v0.0.1

library
  -- Modules exported by the library.
  exposed-modules:   Bio.ViennaRNAParser
  other-modules:     Bio.RNAfoldData
                     Bio.RNAfoldParser
                     Bio.RNAplexData
                     Bio.RNAplexParser
                     Bio.RNAzData
                     Bio.RNAzParser
  -- Other library packages from which modules are imported.
  build-depends:       base >=4.5 && <5, parsec
  
  -- Directories containing source files.
  hs-source-dirs:      src
  
